feat: User CRUD API 구현 및 Swagger 테스트 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: mongle-backend
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/mongle
+    url: jdbc:postgresql://127.0.0.1:5432/mongle
     username: postgres
     password: mongle123
 
